<resources>
    <string name="app_name">Effy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_get_quote">Quote</string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="banner_home_footer">ca-app-pub-7407657038959005/9190651177</string>
    <string name="add_your_goal">Add your goal</string>
    <string name="urgent">Urgent</string>
    <string name="important">Important</string>
    <string name="add">Add</string>
    <string name="tasks">Tasks</string>
    <string name="set">Set</string>
    <string name="sub_tasks">Sub Tasks</string>
    <string name="reminder">Reminder</string>
    <string name="effy">Effy</string>
    <string name="greeting">" lets up your Effy quoitient:)"</string>
    <string name="hey">"Hey "</string>
    <string name="error_goal">Could not add goal</string>
    <string name="loading">loading</string>
    <string name="add_your_sub_goal">Add your Sub goal</string>
    <string name="skip">skip</string>
    <string name="inspirational_quote">Inspirational Quote</string>
    <string name="deviceId">DBF5F803633D4B33A80B6405AAE61643</string>
    <string name="get_quote">Get Quote</string>
    <string name="user_input_error">Please add a goal name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="slogan">Eff up your effy quotient,being effective and efficient with Effy app</string>
    <string name="login_error">Could not login</string>
    <string name="punch_hole">punch hole</string>
    <string name="notifications">Notifications</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="notificaion_title">Daily dose of Inspirational Quotes to keep you Effed up!!</string>
    <string name="know_what_the_dots_mean">Know what the dots mean!</string>
    <string name="easy_peasy">EASY PEASY</string>
</resources>
