<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.app.user.effy.FragmentAddGoalDialog">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/add_your_goal"
        android:ems="10"
        android:id="@+id/editText_goal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:text="@string/urgent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chk_urg"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_goal"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:text="@string/important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chk_imp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_urg"
        android:layout_marginTop="24dp" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_goal"
        android:textColor="@color/textColorPrimary"
        android:background="@color/accent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_imp"
        android:layout_marginTop="@dimen/one_unit" />
</android.support.constraint.ConstraintLayout>
