<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Tasks"
            android:text="@string/tasks"
            android:layout_gravity="fill"
            android:layout_weight="1.5"
            android:textSize="16sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Important"
            android:text="@string/important"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Urgent"
            android:text="@string/urgent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/primary_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_vertical_margin">

        <View
            android:id="@+id/line_w"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider"
            android:padding="4dip" />
    </LinearLayout>
<ListView
    android:layout_width="match_parent"
    android:id="@+id/listview_widget"
    android:layout_height="wrap_content"/>

</LinearLayout>