<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/activity_vertical_margin">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:orientation="vertical">
                <View
                    android:layout_width="8dp"
                    android:layout_height="1dip"
                    android:background="@color/primary"
                    android:padding="2dip" />
                <View
                    android:layout_width="8dp"
                    android:layout_height="1dip"
                    android:background="@color/primary"
                    android:layout_marginTop="8dp"
                    android:padding="2dip" />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_fiber_manual_record_black_18px"
                android:contentDescription="@string/punch_hole" />


        </FrameLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/sub_tasks"
        android:layout_gravity="fill"
        android:layout_weight="2"
        android:id="@+id/sub_goal_name"
        android:textSize="18sp"
        android:paddingBottom="8dp"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Reminder"
        android:paddingBottom="8dp"
       android:src="@drawable/ic_alarm_black_36px"
        android:id="@+id/reminder"
        android:background="@null"
        android:contentDescription="@string/reminder"
        android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff8396"
        android:padding="4dip" />
</LinearLayout>
